--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -25,5 +25,5 @@ $font-size-large: 1.2em;
 $font-sise-normal: 1em;
 $font-size-small: 0.8em;
 
-$padding: 0.5em;
+$padding: 9px;
 
